test/ui/tests/unrecognized-known-binding.stderr
error[E063]: `I-Am-Definitely-Unknown` is not a known binding
 --> ${TEST_FOLDER}/unrecognized-known-binding.lushui:3:1
  |
3 | @known
  | ------
  |
 --> ${TEST_FOLDER}/unrecognized-known-binding.lushui:4:6
  |
4 | data I-Am-Definitely-Unknown: Type of
  |      ^^^^^^^^^^^^^^^^^^^^^^^
  |

error: aborting due to previous error

